# mopa-heightmap

./: .gitignore  IMPLEMENTATION_PLAN.md  README.md  check_deps.py  environment.yml  mopa_zoedepth_lightburn_3d_sliced_workflow.docx  pyproject.toml  render.yaml
LightBurn Colour Card/: Colour100W-M7.lbrn2  Colour20W-M7.lbrn2  Colour30W-M7.lbrn2  Colour60W-M7.lbrn2  Colour80W-M7.lbrn2
apps/: mopa2lightburn.py  zoe2lightburn.py
apps/api/: auth.py  blob_store.py  credits.py  export_openapi.py  main.py  queue.py  schemas.py  service_adapter.py  worker.py
apps/api/routes/: __init__.py  blob.py  export.py  mask.py  plan.py  profile.py  render.py  sculptok.py  session.py  targets.py  upload.py  webhooks.py
apps/web/: angular.json  fix-encoding.js  fix-out.txt  inspect-bytes.js  inspect-out.txt  package-lock.json  package.json  playwright.config.ts  pnpm-lock.yaml
apps/web/playwright/: perf.spec.ts
apps/web/scripts/: check-angular-version.mjs  check-openapi-drift.mjs
apps/web/src/: index.html  styles.scss
apps/web/src/app/: app.config.ts  app.html  app.routes.ts  app.scss  app.spec.ts  app.ts
apps/web/src/app/core/api/: api-client.service.ts  api-types.ts
apps/web/src/app/core/saas/: auth.service.ts  pricing.ts  supabase.ts
apps/web/src/app/core/state/: blob-cache.service.spec.ts  blob-cache.service.ts  constants.spec.ts  export.service.spec.ts  export.service.ts  mask.service.spec.ts  mask.service.ts  plan.service.spec.ts  plan.service.ts  render.service.spec.ts  render.service.ts  sculptok.service.spec.ts  sculptok.service.ts  session-tree.service.spec.ts  session-tree.service.ts  session.service.spec.ts  session.service.ts  studio-state.ts  target.service.ts
apps/web/src/app/core/ui/: auth-modal.component.ts  command-palette.component.ts  credits-badge.component.ts  info-tip.component.spec.ts  info-tip.component.ts
apps/web/src/app/features/pricing/: pricing-page.component.ts
apps/web/src/app/features/studio/: studio-shell.component.ts
apps/web/src/app/features/wizard/: wizard-shell.component.spec.ts  wizard-shell.component.ts
apps/web/src/app/studio/: studio.ts
apps/web/src/app/wizard/: wizard.ts
bench/: smoke_api.py  smoke_sculptok.py
docs/: OPENAPI_REGEN.md  PLAN.md  SONNET_UI_MIGRATION_BRIEF.md
memory/: MEMORY.md  feedback_face_relief_is_the_moat.md  feedback_mask_handles_subject_isolation_in_lightburn.md  feedback_photo_highpass_for_portraits.md  feedback_sculptok_parity_ceiling.md  project_open_backlog.md  project_pass_architecture.md  project_sculptok_only_pivot.md  project_sculptok_portrait_recipe.md  reference_node_toolchain.md  reference_research_artifacts.md
mopa/: burn_time.py  calibration.py  click_mask.py  color_quantize.py  exporter.py  heightmap.py  lbrn_writer.py  lightburn_cards.py  masks.py  pass_masks.py  profiles.py  qa.py  sculptok_client.py  service.py  signature.py  subject_mask.py  target_presets.py
mopa/backgrounds/: __init__.py  generators.py
mopa/imgproc/: __init__.py  auto_crop.py  auto_orient.py  input.py
profiles/: mopa_60w_aluminum.yaml  mopa_60w_brass.yaml  mopa_60w_copper.yaml  mopa_60w_stainless.yaml  sculptok_portrait.yaml
profiles/targets/: coin.yaml  pendant.yaml  plaque.yaml  portrait.yaml  signet_ring.yaml
supabase/: config.toml
supabase/migrations/: 001_user_credits.sql
tests/: conftest.py  test_api_parity.py  test_auto_orient.py  test_autofit.py  test_backends.py  test_backgrounds.py  test_bilateral_cross_filter_depth.py  test_burn_time.py  test_calibration.py  test_clb_writer.py  test_click_mask.py  test_color_quantize.py  test_color_recipes.py  test_delighting.py  test_depth_fusion.py  test_depth_unsharp.py  test_detail.py  test_estimator.py  test_exporter.py  test_external_heightmap.py  test_face_relief.py  test_face_relief_auto_orient.py  test_frankot_chellappa.py  test_heightmap.py  test_history.py  test_imgproc.py  test_lbrn2_export_integration.py  test_lbrn_writer.py  test_lightburn_cards.py  test_lut.py  test_mesh_input.py  test_mesh_synthesis.py  test_normals_and_relief.py  test_pass_masks.py  test_pass_planner.py  test_pipeline.py  test_profile_authoring.py  test_profiles.py  test_qa.py  test_relief_refiner.py  (+8 more)
zoedepth/laser/: __init__.py  autofit.py  backends.py  burn_time.py  calibration.py  color_quantize.py  color_recipes.py  delighting.py  depth_fusion.py  depth_unsharp.py  detail.py  estimator.py  external_heightmap.py  face_relief.py  frankot_chellappa.py  heightmap.py  history.py  lbrn_writer.py  lightburn_cards.py  lut.py  mesh_depth.py  mesh_input.py  mesh_synthesis.py  normals.py  pass_masks.py  pipeline.py  preview.py  profiles.py  qa.py  relief.py  relief_refiner.py  relief_stylizer.py  rerun.py  sculptok_client.py  service.py  settings.py  stages.py  subject_mask.py  super_resolution.py  tiling.py
zoedepth/laser/imgproc/: __init__.py
zoedepth/models/: model_io.py
